--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     window.$docsify = {
       name: '',
       repo: '',
-      loadSidebar: true
+      loadSidebar: true,
+      'cache-control': 'no-cache'
     }
 
   </script>
